--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,9 @@ img {
 
 .page-header {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 2px 1px 0px rgba(46, 47, 66, 0.08);
 }
 
 .page-header .container {
@@ -103,7 +106,7 @@ img {
 .current::after {
   content: "";
   position: absolute;
-  bottom: 0;
+  bottom: -1px;
   left: 0;
   width: 48px;
   height: 4px;
@@ -211,10 +214,11 @@ img {
 }
 
 .advantages-icon-box {
-  width: 264px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 112px;
   flex-shrink: 0;
-  padding: 24px 100px;
   margin-bottom: 8px;
   border: 1px solid #8e8f99;
   border-radius: 4px;
@@ -293,6 +297,7 @@ img {
 
 .team-social-list {
   display: flex;
+  justify-content: center;
   gap: 24px;
   flex-shrink: 0;
 }
@@ -343,30 +348,22 @@ img {
 }
 
 .overlay {
-  padding-top: 40px;
+  padding: 40px 32px;
   position: absolute;
-  left: 0;
   top: 0;
   width: 100%;
   height: 100%;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
   background-color: var(--accent-color);
   transform: translateY(100%);
   transition: transform, 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.overlay-text {
-  width: 296px;
-  height: 96px;
-  margin-left: auto;
-  margin-right: auto;
-  color: #f4f4fd;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-}
-
 .portfolio-item:hover .overlay {
-  transform: translateY(0);
+  transform: translateY(0%);
 }
 
 .portfolio-box {
@@ -397,6 +394,11 @@ img {
 
 footer > .container {
   display: flex;
+  align-items: baseline;
+}
+
+.footer-logo-box {
+  margin-right: 120px;
 }
 
 .logo-footer {
@@ -423,10 +425,6 @@ footer > .container {
   letter-spacing: 0.02em;
 }
 
-.footer-social {
-  margin-left: 120px;
-}
-
 .footer-social-text {
   min-width: 96px;
   color: #fff;
@@ -438,13 +436,13 @@ footer > .container {
 }
 
 .footer-social-list {
-  display: inline-flex;
+  display: flex;
   gap: 16px;
-  align-items: flex-start;
-  flex-shrink: 0;
 }
 
 .footer-social-item {
+  width: 40px;
+  height: 40px;
   background-color: inherit;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -455,14 +453,19 @@ footer > .container {
 }
 
 .footer-social-link {
+  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 40px;
-  height: 40px;
   border-radius: 50%;
   background-color: var(--accent-color);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-social-link:hover,
+.footer-social-link:focus {
+  background-color: #31d0aa;
 }
 
 .footer-social-icons {
