--- a/css/styles.css
+++ b/css/styles.css
@@ -359,7 +359,7 @@ img {
   color: #f4f4fd;
   background-color: var(--accent-color);
   transform: translateY(100%);
-  transition: transform, 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-item:hover .overlay {
